--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,40 +1,48 @@
 name: generate animation
 
 on:
-  # run automatically every 6 hours
   schedule:
-    - cron: "0 */8 * * *" 
+    - cron: "0 */6 * * *"
   
-  # allows to manually run the job at any time
   workflow_dispatch:
-  
-  # run on every push on the master branch
+
   push:
     branches:
-    - master
-    
-  
+      - master
+
 jobs:
+  update-readme:
+    name: Waka 
+    runs-on: ubuntu-latest
+    steps:
+      - uses: athul/waka-readme@master
+        with:
+          WAKATIME_API_KEY: ${{ secrets.WAKATIME }}
+          API_BASE_URL: https://wakatime.com/api
+          SHOW_TITLE: true
+          SECTION_NAME: waka
+          TIME_RANGE: all_time
+          IGNORED_LANGUAGES: YAML JSON TOML GRADLE GROOVY
+
   generate:
-    permissions: 
+    name: Generate Snake Animation
+    permissions:
       contents: write
     runs-on: ubuntu-latest
     timeout-minutes: 5
-    
     steps:
-      # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
-      - name: generate github-contribution-grid-snake.svg
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Generate github-contribution-grid-snake.svg
         uses: Platane/snk/svg-only@v3
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-          
-          
-      # push the content of <build_dir> to a branch
-      # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
-      - name: push github-contribution-grid-snake.svg to the output branch
+
+      - name: Push github-contribution-grid-snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
