--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,17 +12,21 @@ on:
 
 jobs:
   update-readme:
-    name: Waka 
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - uses: athul/waka-readme@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          API_BASE_URL: https://wakatime.com/api
           SHOW_TITLE: true
           SECTION_NAME: waka
           TIME_RANGE: all_time
-          IGNORED_LANGUAGES: YAML JSON TOML GRADLE GROOVY
+          LANG_COUNT: 5
+          SHOW_TIME: true
+          SHOW_TOTAL: false
+          STOP_AT_OTHER: true
 
   generate:
     name: Generate Snake Animation
