Add SHOW_EDITORS option to workflow configuration

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,7 @@ jobs:
           SECTION_NAME: waka
           TIME_RANGE: all_time
           LANG_COUNT: 5
+          SHOW_EDITORS: true
           SHOW_TIME: true
           SHOW_TOTAL: false
           STOP_AT_OTHER: true
